[project]
name = "retire-safe-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain[google-genai]>=0.3.25",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
]
